# quintus

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  codecov.yml  pyproject.toml  requirements.txt  rust-toolchain.toml  shell.nix
examples/: excel.py  (+5 more)
quintus/: .gitignore  Cargo.toml  README.md
quintus/composers/: composer.py
quintus/composers/battery/: phase.py
quintus/evals/: __init__.py  evaluation.py  helpers.py
quintus/evals/battery/: __init__.py  constants.py  evaluation.py  helpers.py
quintus/evals/battery/capacity/: __init__.py  eval.py  model.py
quintus/evals/battery/component/: __init__.py
quintus/evals/battery/energy/: eval.py
quintus/evals/battery/stiffness/: __init__.py  eval.py  model.py
quintus/evals/component/capacity/: eval.py
quintus/evals/composites/battery/: __init__.py  battery.py  evaluation.py  helpers.py
quintus/helpers/: README.md  __init__.py  id_generation.py  parser.py
quintus/io/: __init__.py  dataset.py  datawriter.py  parser.py  reader.py
quintus/io/excel/: __init__.py  configuration.py  flag.py  legend.py  pointers.py  reader.py
quintus/io/json/: datawriter.py
quintus/io/mongo/: dataset.py  datawriter.py  filter.py  helpers.py
quintus/io/sqlite/: datawriter.py
quintus/optimization/: README.md  __init__.py  optimizer.py
quintus/resources/test/excel/: config_v1.0.0.json  quintus_data_v1.0.0.xlsx
quintus/resources/web/: index.html  overview.html
quintus/resources/web/css/: overview.css  style.css
quintus/resources/web/js/: overview.js
quintus/server/: README.md  __init__.py  api.py  app.py  frontend.py  index.py  material.py
quintus/server/api/: __init__.py
quintus/server/api/v1/: __init__.py  data.py  user.py
quintus/server/deployment/: README.md  deployment.yaml  quintus.yaml  service.yaml
quintus/server/deployment/mongo/: claim.yaml  kustomization.yaml  storage.yaml
quintus/server/deployment/postgres/: kustomization.yaml  storage.yaml
quintus/server/frontend/: README.md  __init__.py
quintus/server/helpers/: __init__.py  accounts.py  db.py  login.py  sessions.py
quintus/server/setup/: __init__.py  accounts.py  sessions.py
quintus/server/static/: editor.css
quintus/server/static/css/: root.css  tags.css
quintus/server/static/js/: material.js  material.js.map  module.js  name.js  request.js  tags.js.map
quintus/server/static/ts/: material.ts
quintus/src/: lib.rs
quintus/src/evaluations/: composer.rs  evaluation.rs  filler.rs  mod.rs
quintus/src/helpers/: mod.rs  parsing.rs  queries.rs  tests.rs
quintus/src/io/: excel.rs  mod.rs  sqlite.rs  traits.rs
quintus/src/runner/: mod.rs
quintus/src/server/: mod.rs
quintus/src/structures/: mod.rs
quintus/src/visualization/: mod.rs
quintus/structures/: __init__.py  component.py  helpers.py  layer.py  material.py  measurement.py
quintus/walkers/: filler.py  walker.py
quintus/walkers/optimization/: force.py  optimizer.py
(+143 files in other folders)
