[tool.pdm]

[project]
name = "quintus"
version = "0.1.0"
description = "Help you find the optimal configuration from a set of materials."
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "openpyxl>=3.1.1",
    "numpy>=1.24.2",
    "pymongo>=4.3.3",
    "pydantic>=1.10.6",
    "pymaterial>=0.1.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
visual=[
    "flask>=2.2.3",
    "plotly>=5.13.1",
]
all = ["quintus[visual,test]"]
