[tool.pdm]

[project]
name = "quintus"
version = "0.1.0"
description = "Help you find the optimal configuration from a set of materials."
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "openpyxl>=3.1.1",
    "numpy>=1.25.0",
    "pymongo>=4.5.0",
    "pydantic>=2.4.2",
    "pymaterial>=0.1.7",
    "psycopg[binary]>=3.1.10",
    "click>=8.1.7",
    "flask-login>=0.6.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
visual=[
    "flask>=2.2.3",
    "plotly>=5.18.0",
]
all = ["quintus[visual,test]"]
