[tool.pdm]
distribution = true

[project]
name = "quintus"
version = "0.1.0"
description = "A framework to enable fast material designs"
authors = [
    {name = "Willi Zschiebsch", email = "willi.zschiebsch@gmail.com"},
]
dependencies = [
    "openpyxl>=3.1.1",
    "numpy>=1.25.0",
    "pymongo>=4.5.0",
    "pymaterial>=0.1.7",
    "psycopg[binary]>=3.1.10",
    "click>=8.1.7",
    "flask-login>=0.6.2",
    "pydantic>=2.6.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
server = [
   "flask>=2.2.3",
]
test = [
    "pytest>=7.2.1",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
visual=[
    "plotly>=5.18.0",
    "matplotlib>=3.8.3",
]
all = ["quintus[server,visual,test]"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
