[package]
name = "quintus"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
hex = "0.4.3"
log = "0.4.25"
regex = "1.11.1"
rocket = "0.5.1"
rusqlite = "0.32.1"
serde = {version = "1.0.217", features = ["derive"]}
serde_json = "1.0.137"
sha2 = "0.10.8"
ucum = "0.1.0"
umya-spreadsheet = "2.2.1"
uuid = {version = "1.12.0", features = ["v7","fast-rng"]}
composites = {path = "../composites"}
plotters = "0.3.7"

